@@ -1,5 +1,10 @@
 2008-11-11  Alan Modra  <amodra@bigpond.net.au>
 
+	* elf.c (assign_file_positions_for_non_load_sections): Consolidate
+	PT_GNU_RELRO handling.
+
+2008-11-11  Alan Modra  <amodra@bigpond.net.au>
+
 	PR 7012
 	* dwarf2.c (find_line): Don't keep stale pointers into realloc'd
 	memory.  Return on errors.  Fix memory leak.
